--- a/dotNetProject/BlazorWASM/Pages/CreateAccount.razor
+++ b/dotNetProject/BlazorWASM/Pages/CreateAccount.razor
@@ -8,7 +8,11 @@
         <label>Name of the account</label>
         <input @bind="name">
         <label>Currency:</label>
-        <input @bind="mainCurrency">
+        <select @bind="mainCurrency">
+        <option selected value="krone">Krone</option>
+        <option value="pound">Pound</option>
+        <option value="euro">Euro</option>
+        </select>
     @if (loan)
     {
         <label>Value</label>
@@ -34,6 +38,7 @@
     {
         Console.WriteLine(mainCurrency + loan + value + id + name);
         await accountService.CreateAsync(new AccountCreationDTO(mainCurrency, loan, value, id, name));
+        nav.NavigateTo($"/Accounts/");
     }
 
     protected override async Task OnInitializedAsync()
